--- a/week3/Dockerfile
+++ b/week3/Dockerfile
@@ -3,3 +3,4 @@ RUN git clone https://github.com/Liusiyuan-git/kubernetes-learing.git
 WORKDIR kubernetes-learing/week3
 RUN go mod init week3 && go build -o httpserver week3
 ENTRYPOINT ["/go/kubernetes-learing/week3/httpserver"]
+EXPOSE 8080
